<resources>
    <string name="app_name">不知道起啥名</string>
    <string name="LaunchPage">启动页面图片</string>
    <string name="Logo">logo</string>
    <string name="text_phone">手机号</string>
    <string name="text_pwd">密码</string>
    <string name="fill_phone">请填写手机号</string>
    <string name="fill_pwd">请填写密码</string>
    <string name="xian">分割线</string>
    <string name="sms">用短信验证码登录</string>
    <string name="login">登录</string>
    <string name="retrieve_pwd">找回密码</string>
    <string name="registered">注册新账号</string>
    <string name="NickName">昵称</string>
    <string name="Male">男</string>
    <string name="Female">女</string>
    <string name="pwd">密码</string>
    <string name="pwd_ok">确认密码</string>
    <string name="Agree">已阅读并同意</string>
    <string name="Agreement">《软件许可及服务协议》</string>
    <string name="Example">例如：张三</string>
    <string name="textview">TextView</string>
    <string name="we_chat">WeChat</string>
    <string name="search">搜索</string>
    <string name="life">生活</string>
    <string name="video">影视</string>
    <string name="chat">聊天</string>
    <string name="my">我的</string>
    <string name="phoneA">18420445656</string>
</resources>