<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EFEEEE">

    <TextView
        android:id="@+id/weChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="8dp"
        android:text="@string/we_chat"
        android:textColor="#393838"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="15dp"
        android:layout_height="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/search" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/jia" />

</androidx.constraintlayout.widget.ConstraintLayout>