<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EFEEEE">

    <ImageView
        android:id="@+id/imageLife"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/life"
        app:layout_constraintEnd_toStartOf="@+id/imageVideo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shenghuo_1" />

    <ImageView
        android:id="@+id/imageVideo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/video"
        app:layout_constraintEnd_toStartOf="@+id/imageChat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageLife"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/yingshi" />

    <ImageView
        android:id="@+id/imageChat"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/chat"
        app:layout_constraintEnd_toStartOf="@+id/imageMy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageVideo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/liaotian" />

    <ImageView
        android:id="@+id/imageMy"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/my"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageChat"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wode" />

    <TextView
        android:id="@+id/textLife"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="5dp"
        android:text="@string/life"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textVideo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textVideo"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textChat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textLife" />

    <TextView
        android:id="@+id/textChat"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="5dp"
        android:text="@string/chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textMy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textVideo" />

    <TextView
        android:id="@+id/textMy"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="5dp"
        android:text="@string/my"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textChat"
        app:layout_constraintTop_toBottomOf="@+id/imageMy" />
</androidx.constraintlayout.widget.ConstraintLayout>